# phenetic-diff-checker

./: azure_api_withoutsdk.py  main.py  phoneme_check_robust.py  phoneme_check_robust_2.py  pyproject.toml
