[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhijit Mishra", email = "abhijit25mishra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"