[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhijit Mishra", email = "abhijit25mishra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "protobuf (>=6.33.2,<7.0.0)",
    "phonemizer (>=3.3.0,<4.0.0)",
    "eng-to-ipa (>=0.0.2,<0.0.3)",
    "azure-cognitiveservices-speech (>=1.47.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"